tests/NormalTests/paczka1/fuzzy1/47005358.err
Error in line 7: FSDLeBy7 S577 40,6
Error in line 13: S349 A524 1,51
Error in line 12: FSDLeBy7 A524 36,4
Error in line 15: FSDLeBy7 S577 54,67
Error in line 19: FSDLeBy7 A524 27,21
Error in line 18: ZU1wry S349 89,5
Error in line 10: S349 S910 81,0
Error in line 26: oM06CqGNP A524 25,7
Error in line 27: oM06CqGNP S349 29,1
